--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.0",
+    "https": "^1.0.0",
+    "logger": "0.0.1",
     "mongoose": "^5.9.10",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
